[tool]
[tool.poetry]
name = "aio-nameko-proxy"
version = "1.3.1"
authors = ["laiyongtao <laiyongtao6908@163.com>"]
description = "A standalone nameko rpc proxy for asyncio and a wrapper for using nameko rpc proxy with Sanic. "
license = "Apache License, Version 2.0"
keywords = ["nameko", "sanic", "asyncio", "rpc", "fastapi"]
homepage = "https://github.com/laiyongtao/aio_nameko_proxy"
readme = "README.md"
packages = [
    { include = "edu_auth_service" }
]

[tool.poetry.dependencies]
python = ">3.5.*, <4"
aio-pika = ">=6.6.0"
aiotask-context = ">=0.6.1"
nameko = ">=3.0.0rc9"
